--- a/style.css
+++ b/style.css
@@ -3,3 +3,36 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1{
+  text-align: center;
+}
+
+#featured-property{
+  text-align: center;
+}
+
+nav{
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+#featured-property figcaption{
+text-align: center;
+}
+
+#featured-property p{
+  width: 800px;
+  text-align: center;
+  margin: 20px auto;
+}
+
+#details div{
+  float: left;
+  text-align: center;
+  width: 25%;
+  background-color: red;
+
+}
+
